--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Medicare</title>
+    <style>
+      *{
+          padding: 0;
+          margin: 0;
+          top: 0;
+          box-sizing: border-box;
+      }      
+    </style>
   </head>
   <body>
     <div id="root"></div>
