--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,17 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" data-theme="winter">
   <head>
     <meta charset="UTF-8" />
-   
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Medicare</title>
     <style>
-      *{
-          padding: 0;
-          margin: 0;
-          top: 0;
-          box-sizing: border-box;
-      }      
+      * {
+        padding: 0;
+        margin: 0;
+        top: 0;
+        box-sizing: border-box;
+      }
     </style>
   </head>
   <body>
